# WCPREDICTION

./: .gitignore  .vercelignore  CONTRIBUTING.md  README.md  package.json  pyproject.toml  vercel.json
configs/tournaments/: 2026.yaml
data/: player_scorer_pool_2026.yaml  squads_2026.yaml
scripts/: export_dashboard_data.py  import_fifa_squads.py
src/wcprediction/: __init__.py  cli.py  data.py  elo.py  features.py  metrics.py  model.py  simulate.py  teams.py  tournament.py
tests/: test_elo.py  test_features.py  test_model.py  test_simulate.py  test_tournament.py
web/: index.html  package-lock.json  package.json
web/src/: main.jsx  styles.css
web/src/data/: dashboard.json
