[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wcprediction"
version = "0.1.0"
description = "Reproducible World Cup prediction model with Elo features, calibrated match probabilities, and tournament simulation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
wcp = "wcprediction.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
